# Nuvora

./: .gitignore  docker-compose.yml  package-lock.json  package.json  skills-lock.json
app/: globals.css  layout.tsx  page.tsx  (+1 more)
apps/langgraph_service/: .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  fly.toml  init-db.sql  pyproject.toml  requirements.txt  seed_dev_data.py
apps/langgraph_service/alembic/versions/: 001_create_langgraph_schema.py
apps/langgraph_service/app/: auth.py  config.py  dependencies.py  main.py
apps/langgraph_service/app/api/: agents.py  foods.py  health.py  insights.py
apps/langgraph_service/app/graphs/: base.py  insight_graph.py
apps/langgraph_service/app/graphs/activity_coach/: __init__.py  graph.py  nodes.py  state.py
apps/langgraph_service/app/graphs/daily_gist/: __init__.py  graph.py  nodes.py  state.py
apps/langgraph_service/app/graphs/goal_calibration/: __init__.py  graph.py  nodes.py  state.py
apps/langgraph_service/app/graphs/meal_coach/: __init__.py  graph.py  nodes.py  state.py
apps/langgraph_service/app/graphs/sleep_insight/: __init__.py  graph.py  nodes.py  state.py
apps/langgraph_service/app/schemas/: activity.py  gist.py  goals.py  graph_state.py  insight.py  sleep.py  substitute.py
apps/langgraph_service/app/services/: data_service.py  insight_service.py  llm_service.py  substitute_service.py  supabase_service.py  weather_service.py
apps/langgraph_service/app/utils/: errors.py  streaming.py  tracing.py
apps/langgraph_service/tests/: conftest.py  test_daily_gist.py  test_meal_coach.py
(+137 files in other folders)
